# ai-companion

./: .gitignore  1.1  README.md  debug_heartbeat.py  pyproject.toml  requirements.txt  test_heartbeat_debug.py  test_heartbeat_full.py  test_heartbeat_simple.py  test_schedulers.py
docs/: heartbeat_cron.md
examples/: scheduler_demo.py
plugins/: README.md
scripts/: fix_session_encoding.py
src/ai_companion/: __init__.py  __main__.py  cli.py
src/ai_companion/agent/: __init__.py  loop.py  stop_reason.py  turn.py
src/ai_companion/channels/: __init__.py  base.py  cli.py  feishu.py
src/ai_companion/concurrency/: __init__.py  lanes.py  tracker.py
src/ai_companion/config/: cron.py  heartbeat.py  loader.py  schema.py
src/ai_companion/cron/: __init__.py  scheduler.py  types.py
src/ai_companion/delivery/: __init__.py  backoff.py  queue.py
src/ai_companion/gateway/: __init__.py  binding.py  router.py  server.py
src/ai_companion/heartbeat/: __init__.py  runner.py
src/ai_companion/intelligence/: __init__.py  bootstrap.py  builder.py  prompt_layers.py
src/ai_companion/logging/: logger.py
src/ai_companion/plugins/: base.py  loader.py  manifest.py  registry.py
src/ai_companion/providers/: anthropic.py  base.py  openai.py
src/ai_companion/resilience/: __init__.py  retry.py  rotation.py
src/ai_companion/services/: __init__.py  scheduler_service.py
src/ai_companion/skills/: __init__.py  base.py  manager.py
tests/: __init__.py  conftest.py
workspace/: AGENTS.md  BOOTSTRAP.md  CRON.json  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
(+11 files in other folders)
